# LearnAlgo

./: .gitignore  0.init.sh  readme.md
1.BasicAlgo/05.search_algorithms/: demo.py  readme.md
1.BasicAlgo/06.sorting_algorithms/: demo.py  readme.md
1.BasicAlgo/07.graph_algorithms/: demo.py  readme.md
1.BasicAlgo/08.dynamic_programming/: demo.py  readme.md
1.BasicAlgo/09.recursion/: recursion_demo.c
1.math/: readme.md
1.math/01.algebra/: readme.md
1.math/02.analysis/: readme.md
1.math/03.geometry/: readme.md
1.math/04.number_theory/: readme.md
1.math/05.discrete_math/: readme.md
1.math/06.probability/: readme.md
1.math/07.computational_math/: readme.md
1.math/08.math_physics/: readme.md
1.math/09.operations_research/: readme.md
2.BasicAlgo/: demo.py  readme.md
2.BasicAlgo/05.search_algorithms/: demo.py  readme.md
2.BasicAlgo/06.sorting_algorithms/: demo.py  readme.md
2.BasicAlgo/07.graph_algorithms/: demo.py  readme.md
2.BasicAlgo/08.dynamic_programming/: demo.py
2.BasicAlgo/09.recursion/: recursion_demo.py
2.GenAlgorithm/: readme.md
2.GenAlgorithm/02.rotation_matrix/: ReadMe.md
2.GenAlgorithm/04.geometric_algorithms/: demo.py
2.GenAlgorithm/05.numerical_optimization/: readme.md
2.GenAlgorithm/06.interpolation/: demo.py  readme.md
2.GenAlgorithm/08.feature_detection/: readme.md
3.Classical/: readme.md
3.Classical/01.point_cloud/04.ppf/demo/: CMakeLists.txt  Makefile
3.Classical/02.classical_cv/: demo.py  (+1 more)
4.ML/: readme.md
5.ML/: readme.md
6.DL/: readme.md
6.Vcodec/: readme.md
tools/: README.md  pyproject.toml
(+225 files in other folders)
